force-app/main/default/objects/Contract_Information__c/Contract_Information__c.object-meta.xml
<CustomObject>
    <label>Contract Information</label>
    <nameField>
        <label>Contract Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>