force-app/main/default/objects/Contract_Information__c/fields/Address_No__c.field-meta.xml
<CustomField>
    <fullName>Address_No__c</fullName>
    <label>Address No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>