force-app/main/default/objects/Contract_Information__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Contract Informations</relationshipLabel>
    <relationshipName>Contract_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>