force-app/main/default/objects/Contract_Information__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <label>Head Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>