force-app/main/default/objects/Contract_Information__c/fields/ID_Issue_dated__c.field-meta.xml
<CustomField>
    <fullName>ID_Issue_dated__c</fullName>
    <label>ID Issue dated</label>
    <type>Date</type>
</CustomField>