force-app/main/default/objects/Contract_Information__c/fields/ID_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>ID_Issued_By__c</fullName>
    <label>ID Issued By</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ID_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Công An</fullName>
            </value>
            <value>
                <fullName>Cục trưởng Cục Cảnh sát ĐKQL cư trú và DLQG về dân cư</fullName>
            </value>
            <value>
                <fullName>Cục trưởng Cục Cảnh sát Quản lý Hành chính về Trật tự Xã hội</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>