force-app/main/default/objects/Contract_Information__c/fields/ID_number__c.field-meta.xml
<CustomField>
    <fullName>ID_number__c</fullName>
    <label>ID number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>