force-app/main/default/objects/Contract_Information__c/fields/Permanent_residence__c.field-meta.xml
<CustomField>
    <fullName>Permanent_residence__c</fullName>
    <label>Temporary Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>