force-app/main/default/objects/Contract_Information__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Province</label>
    <referenceTo>Province__c</referenceTo>
    <relationshipLabel>Contract Informations</relationshipLabel>
    <relationshipName>Contract_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>