force-app/main/default/objects/Contract_Information__c/fields/Represented_by__c.field-meta.xml
<CustomField>
    <fullName>Represented_by__c</fullName>
    <label>Represented by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>