force-app/main/default/objects/Contract_Information__c/fields/Represented_By_Eng__c.field-meta.xml
<CustomField>
    <fullName>Represented_By_Eng__c</fullName>
    <label>Represented By Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>