force-app/main/default/objects/Contract_Information__c/fields/Represented_Title__c.field-meta.xml
<CustomField>
    <fullName>Represented_Title__c</fullName>
    <label>Represented Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>