force-app/main/default/objects/Contract_Information__c/fields/Tax_code__c.field-meta.xml
<CustomField>
    <fullName>Tax_code__c</fullName>
    <label>Tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>