force-app/main/default/objects/Contract_Information__c/recordTypes/Person.recordType-meta.xml
<RecordType>
    <fullName>Person</fullName>
    <active>true</active>
    <label>Person</label>
</RecordType>